--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,14 +2,13 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/reviews{{reviews.id}}">{{reviews.name}}</a>
     </h2>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{reviews.user.name}} on {{format_date reviews.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{reviews.description}}
     </p>
   </div>
 </div>
