login route works

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
       <h1>The Shop!</h1>
       <nav>
         {{#if logged_in}}
-        <a href="../../public/js/profile.js">profile</a> |
+        <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="../../public/js/login.js">login</a>
+        <a href="/login">login</a>
         {{/if}}
       </nav>
     </header>
