--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button type="button" class="btn btn-primary btn-block mb-4 login-form">Sign in</button>
 
   <!-- Register buttons -->
   <div class="text-center">
@@ -110,7 +110,7 @@
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">Register</button>
+                    <button type="button" class="btn btn-primary btn-lg signup-form">Register</button>
                   </div>
 
                 </form>
