--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>the shop</title>
     <link rel="stylesheet" href="../../public/css/jass.css">
     <link rel="stylesheet" href="../../public/css/style.css">
 </head>
@@ -12,15 +12,8 @@
 <body>
     <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>The Shop!</h1>
-      <nav>
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
+      <h1 class="mainheader">The Shop!</h1>
+    
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
