--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,7 @@
 
     <form class="form new-gift-form">
       <div class="form-group">
-        <label for="gift-name">gift name name:</label>
+        <label for="gift-name">gift name:</label>
         <input class="form-input" type="text" id="gift-name" name="gift-name" />
       </div>
       <div class="form-group">
@@ -45,4 +45,4 @@
   {{/if}}
 </div>
 
-<script src="/public/js/profile.js"></script>
+<script src="/js/profile.js"></script>
