added login page style

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <label for="gift-price">gift price ($):</label>
-        <input class="form-input" type="number" id="gift-price" name="gift-price" />
+        <input class="form-input" type="text" id="gift-price" name="gift-price" />
       </div>
       <div class="form-group">
         <label for="gift-desc">description:</label>
