--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regift</title>
-    <link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reifter</title>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="/css/style.css">
+  
+
 </head>
 
 <body>
-    <div class="flex-column justify-space-around">
+  <div class="flex-column justify-space-around">
+
+  
     <header class="display-flex justify-space-between align-center p-2">
-      <h1 class="mainheader">ReGift</h1>
-    
+      <h1 class="mainheader">ReGifter</h1>
+
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
@@ -22,8 +28,9 @@
     <footer>
       {{!-- footer? --}}
     </footer>
-    </div>
+  </div>
 
 </body>
 
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </html>
