--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,10 @@ body{
 	width:100%;
 	height: 100%;
 }
-label{
+h2 {
+	text-align: center;
+}
+label {
 	color: #fff;
 	font-size: 2.3em;
 	justify-content: center;
@@ -48,13 +51,25 @@ label{
 	cursor: pointer;
 	transition: .5s ease-in-out;
 }
-input{
+input {
 	width: 60%;
 	height: 20px;
 	background: #e0dede;
 	justify-content: center;
 	display: flex;
 	margin: 20px auto;
+	padding: 10px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+textarea {
+	width: 80%;
+	height: 60px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 10px auto;
 	padding: 10px;
 	border: none;
 	outline: none;
