--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,9 +10,7 @@
 {{#each reviews as |reviews| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
-    <h2>
-      <a href="/reviews{{reviews.id}}">{{reviews.name}}</a>
-    </h2>
+    <h2> {{reviews.name}} </h2>
     <p>Created by {{reviews.user.name}} on {{format_date reviews.date_created}}</p>
   </div>
   <div class="col-md-7">
