--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regift</title>
+    <title>ReGifter</title>
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1 class="mainheader">ReGift</h1>
-    
-    </header>
+  <div class="flex-column justify-space-around">
+  <nav class="nav nav-pills nav-justified">
+    <a class="nav-item nav-link active" href="#">Active</a>
+    <a class="nav-item nav-link" href="#">Link</a>
+    <a class="nav-item nav-link" href="/login">logout</a>
+    <a class="nav-item nav-link disabled" href="#">Disabled</a>
+  </nav>
+  
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-      {{!-- footer? --}}
-    </footer>
-    </div>
+  </div>
 
 </body>
+
+<script src="/js/logout.js"></script>
 
 </html>
