--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,5 @@
-
-
-
-
-
-<nav>
-<a class="login-form" href="/login">login</a>
-</nav>
-
 {{#each reviews as |reviews| }}
-<div class="row mb-4 project">
+<div class="row mb-4 review">
 
   <div class="col-md-5">
     <h2> {{reviews.name}} </h2>
@@ -22,7 +13,3 @@
   </div>
 </div>
 {{/each}}
-
-<script>
-  AOS.init();
-</script>
