--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,9 @@ div.login {
 
 /* style for review divs */
 div.review {
-	box-shadow: 2px 2px 20px black;
+	border: 2px solid #008080;
+	border-radius: 20px;
+	box-shadow: 2px 2px 50px #008080;
 	padding: 20px;
 }
 
