--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 {{#each reviews as |reviews| }}
-<div class="row mb-4 review">
+<div class="row mb-4 review" data-aos="fade-up">
 
   <div class="col-md-5">
     <h2> {{reviews.name}} </h2>
