--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,13 +4,9 @@
 
     <h2> Why REGIFTER? </h2>
 
-    <p>
-
-Regifter is a forum application designed for consumers by consumers. 
+    <p> Regifter is a forum application designed for consumers by consumers. 
 Our application allows shoppers to create a unique profile and leave reviews on gifts that have been purchased for you or others.
 At ReGifter, we believe in giving shoppers access to a free space to discuss and give comments on desired products. Need an idea for your next gift?
-Please Sign up on our homepage!
+Please Sign up on our homepage! </p>
 
-</p>
-
-    </div>
+</div>
