--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,10 +20,10 @@
         <button id="menu" class="btn-nav"><span class="fas fa-bars"></span></button>
       </div>
       <div class="nav right">
-        <a href="/" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Home</span></span></a>
-        <a href="/about" class="nav-link"><span class="nav-link-span"><span class="u-nav">About</span></span></a>
-        <a href="/profile" class="nav-link"><span class="nav-link-span"><span class="u-nav">Profile</span></span></a>
-        <a href="/login" class="nav-link"><span class="nav-link-span"><span class="u-nav">Login</span></span></a>
+        <a href="/" class="nav-link" id="nav-home"><span class="nav-link-span"><span class="u-nav">Home</span></span></a>
+        <a href="/about" class="nav-link" id="nav-about"><span class="nav-link-span"><span class="u-nav">About</span></span></a>
+        <a href="/profile" class="nav-link" id="nav-profile"><span class="nav-link-span"><span class="u-nav">Profile</span></span></a>
+        <a href="/login" class="nav-link" id="nav-login"><span class="nav-link-span"><span class="u-nav">Login</span></span></a>
       </div>
     </nav>
   </header>
