--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,11 +2,17 @@
 
     <h1> About Us </h1>
 
-    <h2> Why REGIFTER? </h2>
+    <h2> Why ReGifter? </h2>
 
     <p> Regifter is a forum application designed for consumers by consumers. 
-Our application allows shoppers to create a unique profile and leave reviews on gifts that have been purchased for you or others.
-At ReGifter, we believe in giving shoppers access to a free space to discuss and give comments on desired products. Need an idea for your next gift?
-Please Sign up on our homepage! </p>
+    Our application allows shoppers to create a unique profile and leave reviews on gifts that have been purchased for you or others.
+    At ReGifter, we believe in giving shoppers access to a free space to discuss and give comments on desired products. Need an idea for your next gift?
+    Please Sign up on our homepage! </p>
+    <br>
+    <p>Created by: Karen Atkins, Ben Billings, Shelby Bridwell, and Alex McCaskill</p>
 
 </div>
+
+<script src="/js/about.js"></script>
+
+
