--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
 {{#each reviews as |reviews| }}
-<div class="row mb-4 review" data-aos="fade-up">
+<div class="row mb-4 review" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
 
   <div class="col-md-5">
     <h2> {{reviews.name}} </h2>
