--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -9,7 +9,7 @@
     At ReGifter, we believe in giving shoppers access to a free space to discuss and give comments on desired products. Need an idea for your next gift?
     Please Sign up on our homepage! </p>
     <br>
-    <p>Created by: Karen Atkins, Ben Billings, Shelby Bridwell, and Alex McCaskill</p>
+    <p>Created by: Karen Adkins, Ben Billings, Shelby Bridwell, and Alex McCaskill</p>
 
 </div>
 
